04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/httpbin/httpbin-destnationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  subsets:
  - name: num0
    labels:
      postnum: "0"
  - name: num1
    labels:
      postnum: "1"
