04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/httpbin/httpbin-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-gateway
  namespace: default
spec:
  gateways:
  - httpbin-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /get
    - uri:
        regex: '^.*\.(ico|png|jpg|css|json|js)$'
    route:
    - destination:
        host: httpbin
        port:
          number: 80
